<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="condition">播放状态</string>
    <string name="start">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="quit">退出</string>
</resources>
